--- a/os-problem-animation.html
+++ b/os-problem-animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SJF Scheduling - Gantt Chart</title>
+  <title>SJF Scheduling - Moving Gantt Animation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
+      gap: 40px;
       padding-top: 40px;
     }
 
@@ -47,6 +47,8 @@
       font-weight: bold;
       color: #111;
       opacity: 0;
+      position: relative;
+      z-index: 10;
     }
     .p1 { background: #e74c3c; animation: appear 1s forwards 0.5s; }
     .p2 { background: #3498db; animation: appear 1s forwards 1.5s; }
@@ -77,44 +79,49 @@
       height: 100%;
       position: absolute;
       top: 0;
-      left: 0;
-      transform: scaleX(0);
-      transform-origin: left;
-      opacity: 0;
-    }
-    .bar span {
-      position: absolute;
-      bottom: 5px;
-      left: 10px;
-      font-size: 14px;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      padding-left: 8px;
       font-weight: bold;
       color: #fff;
+      opacity: 0;
+      transform: translateY(0) scaleX(0);
+      transform-origin: left;
     }
 
-    /* P3 (BT=2, shortest, runs first) */
-    .bar.p3 {
-      background: #2ecc71;
-      width: 80px; /* proportional to burst time */
-      animation: showBar 2s forwards 4s;
-    }
-    /* P2 (BT=4, second) */
-    .bar.p2 {
-      background: #3498db;
-      width: 160px;
-      left: 80px;
-      animation: showBar 4s forwards 6s;
-    }
-    /* P1 (BT=8, last) */
-    .bar.p1 {
-      background: #e74c3c;
-      width: 320px;
-      left: 240px;
-      animation: showBar 8s forwards 10s;
+    /* Burst-time scaling widths and positions */
+    .bar.p3 { background: #2ecc71; width: 80px; left: 0; }
+    .bar.p2 { background: #3498db; width: 160px; left: 80px; }
+    .bar.p1 { background: #e74c3c; width: 320px; left: 240px; }
+
+    /* Animations for bars */
+    .bar.p3 { animation: expand 2s forwards 5s; }
+    .bar.p2 { animation: expand 4s forwards 7.5s; }
+    .bar.p1 { animation: expand 8s forwards 12s; }
+
+    @keyframes expand {
+      0%   { opacity: 1; transform: scaleX(0); }
+      40%  { opacity: 1; transform: scaleX(0.2); }
+      100% { opacity: 1; transform: scaleX(1); }
     }
 
-    @keyframes showBar {
-      from { transform: scaleX(0); opacity: 1; }
-      to   { transform: scaleX(1); opacity: 1; }
+    /* Animations for processes moving from queue to Gantt */
+    .process.p3 { animation: appear 1s forwards 0.5s, moveToGanttP3 1s forwards 4s; }
+    .process.p2 { animation: appear 1s forwards 1.5s, moveToGanttP2 1s forwards 6.5s; }
+    .process.p1 { animation: appear 1s forwards 2.5s, moveToGanttP1 1s forwards 11s; }
+
+    @keyframes moveToGanttP3 {
+      0%   { opacity: 1; transform: translate(0, 0); }
+      100% { opacity: 0; transform: translate(0, 170px); }
+    }
+    @keyframes moveToGanttP2 {
+      0%   { opacity: 1; transform: translate(0, 0); }
+      100% { opacity: 0; transform: translate(0, 170px); }
+    }
+    @keyframes moveToGanttP1 {
+      0%   { opacity: 1; transform: translate(0, 0); }
+      100% { opacity: 0; transform: translate(0, 170px); }
     }
 
     /* Time markers */
@@ -129,7 +136,7 @@
   </style>
 </head>
 <body>
-  <h2>SJF Scheduling - Gantt Chart Animation</h2>
+  <h2>SJF Scheduling - Moving to Gantt Chart</h2>
 
   <div class="queue">
     <div class="process p1">P1</div>
@@ -138,9 +145,9 @@
   </div>
 
   <div class="gantt">
-    <div class="bar p3"><span>P3</span></div>
-    <div class="bar p2"><span>P2</span></div>
-    <div class="bar p1"><span>P1</span></div>
+    <div class="bar p3">P3</div>
+    <div class="bar p2">P2</div>
+    <div class="bar p1">P1</div>
   </div>
   <div class="times">
     <span>0</span>
